--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a full time developer id fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am a quick learner and fond of tools and technologies and pursing my bachelor
+            degree in Computer Science Engineering in Nepal Engineering College,
+            
+            Bhaktapur.</p>
         </div>
 
         <div class="row">
