--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
            <div class="resume-item">
             <h4>School Level Certificate(SLC)</h4>
             <h5>Graduated in 2014</h5>
-            <p>Bridgewater International Higher Secondary School</p>
-            <p>Sinamangal,Kathmandu</em></p>
+            <p>Golden Sungava English Secondary School</p>
+            <p>Changunarayan,Bhaktapur</em></p>
          </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
