--- a/index.html
+++ b/index.html
@@ -70,20 +70,8 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Maheshwor Shakha</h1>
       <p>I'm <span class="typed" data-typed-items="Developer, Freelancer,Cover Singer"></span></p>
-   
-    <button style=" height: 50px;
-    width: 100px;
-    background: lightseagreen;
-    margin: 20px;
-    float: left;
-    box-shadow: 0 0 1px #ccc;
-    -webkit-transition: all 0.5s ease-in-out;
-    border: 0px;
-    color: #fff;
-    :hover{
-    -webkit-transform: scale(1.1);
-    background: #31708f;
-}" type="button" class="btn btn-light">View CV</button> </div>
+    
+    <a  href="assets/img/Maheshwor Shakha CV.pdf" type="button" class="btn btn-light">View CV</a> </div>
   </section><!-- End Hero -->
 
   <main id="main">
