--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <h1>Maheshwor Shakha</h1>
       <p>I'm <span class="typed" data-typed-items="Developer, Freelancer,Cover Singer"></span></p>
     
-    <a  href="assets/img/Maheshwor Shakha CV.pdf" type="button" class="btn btn-light">View CV</a> </div>
+    <a  href="assets/img/Maheshwor Shakha CV.pdf" type="button" class="btn btn-primary">View CV</a> </div>
   </section><!-- End Hero -->
 
   <main id="main">
