--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Maheshwor Shakha</h4>
-              <p>I am working as an intern in Medi-Flow Solution Pvt. Ltd. I have Completed my three years at Nepal Engineering College and Currently in Final Year.</p>
+              <p>I am working as an .Net Developer in Medi-Flow Solution Pvt. Ltd. I have Completed my three years at Nepal Engineering College and Currently in Final Year.</p>
               <ul>
                 <li>Changunarayan-3,Bhaktapur</li>
                 <li>+977 9860117261</li>
