--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>.Net Developer Intern at Medi-Flow Solutions Pvt.Ltd.</h4>
+              <h4>.Net Developer at Medi-Flow Solutions Pvt.Ltd.</h4>
               <h5>2021 - Present</h5>
               <p><em>Battisputali,Kathmandu</em></p>
               <ul>
