--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor in Computer Enginnering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>maheshworshakha33@gmail.com</span></li>
                </ul>
               </div>
