--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor in Computer Enginnering</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor in Computer Engineering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>maheshworshakha33@gmail.com</span></li>
                </ul>
               </div>
@@ -253,7 +253,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor in Computer Enginnering </h4>
+              <h4>Bachelor in Computer Engineering </h4>
               <h5>2017 - Present</h5>
               <p>Nepal Engineering College,Bhaktapur</p>
               <p>Affilated to Pokhara University</p>
