--- a/index.html
+++ b/index.html
@@ -274,8 +274,19 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>.Net Developer at Vanilla Transtechnor Pvt. Ltd</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Lal Colony Marg,Kathmandu</em></p>
+              <ul>
+                <li>Model,View and Controller of .Net Framework.</li>
+                <li>Entity Framework,Jquery,JavaScript,Angular JS etc.</li>
+                <li>Authentication and Authorization</li>
+                <li>MS SQL,MySQL,Mongo DB </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>.Net Developer at Medi-Flow Solutions Pvt.Ltd.</h4>
-              <h5>2021 - Present</h5>
+              <h5>2021 - 2022</h5>
               <p><em>Battisputali,Kathmandu</em></p>
               <ul>
                 <li>Model,View and Controller of .Net Framework.</li>
